--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@sentry/nextjs": "^8.4.0",
     "appwrite": "^14.0.1",
     "chart.js": "^4.4.2",
@@ -23,6 +24,7 @@
     "next": "14.2.3",
     "node-appwrite": "^12.0.1",
     "plaid": "^23.0.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
